--- a/backend/src/processing/data_prep.ipynb
+++ b/backend/src/processing/data_prep.ipynb
@@ -92,7 +92,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe4802c3580>]"
+       "[<matplotlib.lines.Line2D at 0x7fd66f1c75e0>]"
       ]
      },
      "execution_count": 9,
@@ -136,7 +136,7 @@
     {
      "data": {
       "text/plain": [
-       "[<matplotlib.lines.Line2D at 0x7fe47eec0eb0>]"
+       "[<matplotlib.lines.Line2D at 0x7fd66ddbcdf0>]"
       ]
      },
      "execution_count": 11,
@@ -205,7 +205,7 @@
      "text": [
       "/home/spirit/Edu/Cyber/cyber_new/venv/lib/python3.10/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/tmp/ipykernel_5533/3473310514.py:1: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7429/3473310514.py:1: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -213,7 +213,7 @@
       "  train_df[\"scaled\"] = min_max_scaler.transform(train_df.values)\n",
       "/home/spirit/Edu/Cyber/cyber_new/venv/lib/python3.10/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/tmp/ipykernel_5533/3473310514.py:2: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7429/3473310514.py:2: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -221,7 +221,7 @@
       "  val_df[\"scaled\"] = min_max_scaler.transform(val_df.values)\n",
       "/home/spirit/Edu/Cyber/cyber_new/venv/lib/python3.10/site-packages/sklearn/base.py:450: UserWarning: X does not have valid feature names, but MinMaxScaler was fitted with feature names\n",
       "  warnings.warn(\n",
-      "/tmp/ipykernel_5533/3473310514.py:3: SettingWithCopyWarning: \n",
+      "/tmp/ipykernel_7429/3473310514.py:3: SettingWithCopyWarning: \n",
       "A value is trying to be set on a copy of a slice from a DataFrame.\n",
       "Try using .loc[row_indexer,col_indexer] = value instead\n",
       "\n",
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "id": "8959dd24-bcbb-41b5-abf6-b5d4fd339f5f",
    "metadata": {},
    "outputs": [],
@@ -249,15 +249,324 @@
     "        self.n_input = n_input\n",
     "        self.n_output = n_output\n",
     "        self.step = step\n",
-    "    \n",
-    "    def convert(self, data):\n",
+    "\n",
+    "    def series_to_supervised(self, data, dropnan=True):\n",
+    "        \"\"\"\n",
+    "        Frame a time series as a supervised learning dataset.\n",
+    "        Arguments:\n",
+    "            data: Sequence of observations as a list or NumPy array.\n",
+    "            n_in: Number of lag observations as input (X).\n",
+    "            n_out: Number of observations as output (y).\n",
+    "            dropnan: Boolean whether or not to drop rows with NaN values.\n",
+    "        Returns:\n",
+    "            Pandas DataFrame of series framed for supervised learning.\n",
+    "        \"\"\"\n",
+    "        variables = data.columns \n",
+    "        n_vars = 1 if type(data) is list else data.shape[1]\n",
+    "        \n",
+    "        df = pd.DataFrame(data)\n",
+    "        cols, names = list(), list()\n",
+    "        # input sequence (t-n, ... t-1)\n",
+    "        for i in range(self.n_input, 0, -1):\n",
+    "            cols.append(df.shift(i))\n",
+    "            names += [(f'{name}(t-{i})') for name in variables]\n",
+    "        # forecast sequence (t, t+1, ... t+n)\n",
+    "        for i in range(0, self.n_output):\n",
+    "            cols.append(df.shift(-i))\n",
+    "            if i == 0:\n",
+    "                names += [(f'{name}(t)') for name in variables]\n",
+    "            else:\n",
+    "                names += [(f'{name}(t+{i})') for name in variables]\n",
+    "        # put it all together\n",
+    "        agg = pd.concat(cols, axis=1)\n",
+    "        agg.columns = names\n",
+    "        # drop rows with NaN values\n",
+    "        if dropnan:\n",
+    "            agg.dropna(inplace=True)\n",
+    "        return agg\n",
     "        "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "332af0df-0f5e-468d-b8a2-42238a6097cf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c = ConvertSeries2Matrix(3,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "220a2ea7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = c.series_to_supervised(train_df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "77583572",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>value(t-3)</th>\n",
+       "      <th>scaled(t-3)</th>\n",
+       "      <th>value(t-2)</th>\n",
+       "      <th>scaled(t-2)</th>\n",
+       "      <th>value(t-1)</th>\n",
+       "      <th>scaled(t-1)</th>\n",
+       "      <th>value(t)</th>\n",
+       "      <th>scaled(t)</th>\n",
+       "      <th>value(t+1)</th>\n",
+       "      <th>scaled(t+1)</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>time_point</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01 03:00:00+00:00</th>\n",
+       "      <td>13.822500</td>\n",
+       "      <td>0.456056</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.875000</td>\n",
+       "      <td>0.460719</td>\n",
+       "      <td>13.864500</td>\n",
+       "      <td>0.459786</td>\n",
+       "      <td>13.895667</td>\n",
+       "      <td>0.462554</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01 04:00:00+00:00</th>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.875000</td>\n",
+       "      <td>0.460719</td>\n",
+       "      <td>13.864500</td>\n",
+       "      <td>0.459786</td>\n",
+       "      <td>13.895667</td>\n",
+       "      <td>0.462554</td>\n",
+       "      <td>13.916333</td>\n",
+       "      <td>0.464389</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01 05:00:00+00:00</th>\n",
+       "      <td>13.875000</td>\n",
+       "      <td>0.460719</td>\n",
+       "      <td>13.864500</td>\n",
+       "      <td>0.459786</td>\n",
+       "      <td>13.895667</td>\n",
+       "      <td>0.462554</td>\n",
+       "      <td>13.916333</td>\n",
+       "      <td>0.464389</td>\n",
+       "      <td>13.912200</td>\n",
+       "      <td>0.464022</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01 06:00:00+00:00</th>\n",
+       "      <td>13.864500</td>\n",
+       "      <td>0.459786</td>\n",
+       "      <td>13.895667</td>\n",
+       "      <td>0.462554</td>\n",
+       "      <td>13.916333</td>\n",
+       "      <td>0.464389</td>\n",
+       "      <td>13.912200</td>\n",
+       "      <td>0.464022</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-03-01 07:00:00+00:00</th>\n",
+       "      <td>13.895667</td>\n",
+       "      <td>0.462554</td>\n",
+       "      <td>13.916333</td>\n",
+       "      <td>0.464389</td>\n",
+       "      <td>13.912200</td>\n",
+       "      <td>0.464022</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.760333</td>\n",
+       "      <td>0.450536</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-04 20:00:00+00:00</th>\n",
+       "      <td>14.676833</td>\n",
+       "      <td>0.531925</td>\n",
+       "      <td>14.437333</td>\n",
+       "      <td>0.510657</td>\n",
+       "      <td>14.229000</td>\n",
+       "      <td>0.492156</td>\n",
+       "      <td>14.062333</td>\n",
+       "      <td>0.477355</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-04 21:00:00+00:00</th>\n",
+       "      <td>14.437333</td>\n",
+       "      <td>0.510657</td>\n",
+       "      <td>14.229000</td>\n",
+       "      <td>0.492156</td>\n",
+       "      <td>14.062333</td>\n",
+       "      <td>0.477355</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.676833</td>\n",
+       "      <td>0.443121</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-04 22:00:00+00:00</th>\n",
+       "      <td>14.229000</td>\n",
+       "      <td>0.492156</td>\n",
+       "      <td>14.062333</td>\n",
+       "      <td>0.477355</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.676833</td>\n",
+       "      <td>0.443121</td>\n",
+       "      <td>13.499667</td>\n",
+       "      <td>0.427387</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-04 23:00:00+00:00</th>\n",
+       "      <td>14.062333</td>\n",
+       "      <td>0.477355</td>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.676833</td>\n",
+       "      <td>0.443121</td>\n",
+       "      <td>13.499667</td>\n",
+       "      <td>0.427387</td>\n",
+       "      <td>13.364333</td>\n",
+       "      <td>0.415369</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021-05-05 00:00:00+00:00</th>\n",
+       "      <td>13.843500</td>\n",
+       "      <td>0.457921</td>\n",
+       "      <td>13.676833</td>\n",
+       "      <td>0.443121</td>\n",
+       "      <td>13.499667</td>\n",
+       "      <td>0.427387</td>\n",
+       "      <td>13.364333</td>\n",
+       "      <td>0.415369</td>\n",
+       "      <td>13.260167</td>\n",
+       "      <td>0.406119</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1558 rows × 10 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                           value(t-3)  scaled(t-3)  value(t-2)  scaled(t-2)  \\\n",
+       "time_point                                                                    \n",
+       "2021-03-01 03:00:00+00:00   13.822500     0.456056   13.843500     0.457921   \n",
+       "2021-03-01 04:00:00+00:00   13.843500     0.457921   13.875000     0.460719   \n",
+       "2021-03-01 05:00:00+00:00   13.875000     0.460719   13.864500     0.459786   \n",
+       "2021-03-01 06:00:00+00:00   13.864500     0.459786   13.895667     0.462554   \n",
+       "2021-03-01 07:00:00+00:00   13.895667     0.462554   13.916333     0.464389   \n",
+       "...                               ...          ...         ...          ...   \n",
+       "2021-05-04 20:00:00+00:00   14.676833     0.531925   14.437333     0.510657   \n",
+       "2021-05-04 21:00:00+00:00   14.437333     0.510657   14.229000     0.492156   \n",
+       "2021-05-04 22:00:00+00:00   14.229000     0.492156   14.062333     0.477355   \n",
+       "2021-05-04 23:00:00+00:00   14.062333     0.477355   13.843500     0.457921   \n",
+       "2021-05-05 00:00:00+00:00   13.843500     0.457921   13.676833     0.443121   \n",
+       "\n",
+       "                           value(t-1)  scaled(t-1)   value(t)  scaled(t)  \\\n",
+       "time_point                                                                 \n",
+       "2021-03-01 03:00:00+00:00   13.875000     0.460719  13.864500   0.459786   \n",
+       "2021-03-01 04:00:00+00:00   13.864500     0.459786  13.895667   0.462554   \n",
+       "2021-03-01 05:00:00+00:00   13.895667     0.462554  13.916333   0.464389   \n",
+       "2021-03-01 06:00:00+00:00   13.916333     0.464389  13.912200   0.464022   \n",
+       "2021-03-01 07:00:00+00:00   13.912200     0.464022  13.843500   0.457921   \n",
+       "...                               ...          ...        ...        ...   \n",
+       "2021-05-04 20:00:00+00:00   14.229000     0.492156  14.062333   0.477355   \n",
+       "2021-05-04 21:00:00+00:00   14.062333     0.477355  13.843500   0.457921   \n",
+       "2021-05-04 22:00:00+00:00   13.843500     0.457921  13.676833   0.443121   \n",
+       "2021-05-04 23:00:00+00:00   13.676833     0.443121  13.499667   0.427387   \n",
+       "2021-05-05 00:00:00+00:00   13.499667     0.427387  13.364333   0.415369   \n",
+       "\n",
+       "                           value(t+1)  scaled(t+1)  \n",
+       "time_point                                          \n",
+       "2021-03-01 03:00:00+00:00   13.895667     0.462554  \n",
+       "2021-03-01 04:00:00+00:00   13.916333     0.464389  \n",
+       "2021-03-01 05:00:00+00:00   13.912200     0.464022  \n",
+       "2021-03-01 06:00:00+00:00   13.843500     0.457921  \n",
+       "2021-03-01 07:00:00+00:00   13.760333     0.450536  \n",
+       "...                               ...          ...  \n",
+       "2021-05-04 20:00:00+00:00   13.843500     0.457921  \n",
+       "2021-05-04 21:00:00+00:00   13.676833     0.443121  \n",
+       "2021-05-04 22:00:00+00:00   13.499667     0.427387  \n",
+       "2021-05-04 23:00:00+00:00   13.364333     0.415369  \n",
+       "2021-05-05 00:00:00+00:00   13.260167     0.406119  \n",
+       "\n",
+       "[1558 rows x 10 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7988bf9f",
    "metadata": {},
    "outputs": [],
    "source": []
